<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/all_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_corner_bg"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/browse_all_events_text"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_events_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/my_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_corner_bg"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/browse_my_events_text"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_events_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
