<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createEventClickAboveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/click_to_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEventImageCard" />

    <TextView
        android:id="@+id/createEventHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_your_own_event"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEventClickAboveTextView">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertCenter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="189dp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/createEventTitleEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/title_colon"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/createEventDescEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/description_colon"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createEventTitleEditText" />

        <EditText
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="15"
            android:hint="@string/date_of_the_event"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/createEventDescEditText"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createEventSetCheckInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/color2"
            android:text="@string/set_check_in_qr"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationPickerText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createEventSetDetailsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/color2"
            android:text="@string/set_details_qr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertCenter"
            app:layout_constraintTop_toTopOf="@+id/createEventSetCheckInButton" />

        <EditText
            android:id="@+id/createEventCapacityEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/capacity_optional"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" />

        <EditText
            android:id="@+id/locationPickerText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/pick_location"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/locationPickerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createEventCapacityEditText"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/locationPickerButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_horizontal"
            android:background="@drawable/location_icon"
            android:clickable="true"
            android:contentDescription="@string/location_icon"
            app:layout_constraintBottom_toBottomOf="@+id/locationPickerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locationPickerText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createEventConfirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/color2"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createEventSetCheckInButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/createEventImageCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/your_event_poster"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEventHeaderTextView">

        <ImageView
            android:id="@+id/createEventImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/your_event_poster"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/event_image" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
