<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckInFragment"
    android:background="@color/color1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:src="@drawable/event_image2"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to the Event!"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Qr_Code_Message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/scan_qr_code"
        android:padding="20dp"
        android:textSize="16dp"
        android:background="@color/color2"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/enable_geo_tracking"
        android:paddingTop="200dp"
        android:textColor="@color/black"/>

</LinearLayout>
